# MBEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  conanfile.py
Benchmarks/: CMakeLists.txt
Benchmarks/BenchmarkSyntaxTree/: BenchmarkSyntaxTree.cpp  CMakeLists.txt
BuildScripts/: conan_install.ps1  conan_install.sh  conan_install_macos.sh  conanfileBuildTools.txt
BuildScripts/Darwin/: conanprofile.txt
BuildScripts/Windows/: conanprofile.txt  conanprofiledebug.txt
ChatService/: CMakeLists.txt
ChatService/client/src/: client.cpp
ChatService/server/: CMakeLists.txt
ChatService/server/src/: server.cpp
Documentation/: Doxyfile
FlowSolver/: CMakeLists.txt  README.md
FlowSolver/Driver/: CMakeLists.txt  Grid.hpp
FlowSolver/LinearSolver/: CMakeLists.txt  Jacobi.cpp
FlowSolver/Mesher/: CMakeLists.txt  Quadtree.cpp  Quadtree.h  main.cpp
FlowSolver/ParticleSolver/: CMakeLists.txt  main.cpp  postprocessing.py  pywrapper.cpp  requirements.txt  setup.py  solver.cpp  solver.h
FlowSolver/Postpro/: plotLine.py
FlowSolver/include/: Buffer.hpp  Constants.hpp  LinearConvection.hpp  Writer.hpp
FlowSolver/src/: main.cpp
Graphics/: CMakeLists.txt
Graphics/hoops/: CMakeLists.txt  HoopsRenderer.cpp
Graphics/include/: ImguiUtils.hpp  Render.hpp  ShaderUtils.hpp  WindowUtils.hpp  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_vulkan.h
Graphics/include/QT/: QtGUI.hpp
Graphics/src/: HoopsGUI.cpp  ImguiUtils.cpp  MarchingCubes.cpp  MarchingCubes2.cpp  Render.cpp  ShaderUtils.cpp  SurfaceNets.c  WindowUtils.cpp  main.cpp  renderTriangles.py  renderer.cpp
Graphics/src/QT/: QtGUI.cpp
Graphics/src/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_vulkan.h
RayTracer/: CMakeLists.txt  README.md
RayTracer/include/: Camera.hpp  Color.hpp  Constants.hpp  Hitter.hpp  HitterList.hpp  KernelWrapper.h  Lambertian.hpp  Logger.hpp  MaterialInterface.hpp  Metal.hpp  Octree.hpp  PNGWriter.hpp  PPMWriter.hpp  Ray.hpp  Sphere.hpp  ThreadPool.hpp  Utils.hpp  Vec3.hpp  WriterInterface.hpp
RayTracer/samples/: new.ppm
RayTracer/src/: main.cpp
RayTracer/src/Core/: Camera.cpp  Color.cpp  HitterList.cpp  Lambertian.cpp  Metal.cpp  Octree.cpp  Ray.cpp  Sphere.cpp  ThreadPool.cpp  Vec3.cpp
RayTracer/src/Cuda/: RayKernel.cxx
RayTracer/src/OSPray/: main.cpp
RayTracer/src/Optix/: main.cu  optixTriangle.h  optixTriangleKernel.cu
RayTracer/src/Utils/: Logger.cpp  Utils.cpp
RayTracer/src/Writers/: PNGWriter.cpp  PPMWriter.cpp
RemotingService/: CMakeLists.txt
RemotingService/client/: CMakeLists.txt
RemotingService/client/src/: headclient.cpp  headclient_onc.c
RemotingService/protocol/: CMakeLists.txt
RemotingService/protocol/protos/: array_xdr.h  headprotocol.proto  headprotocol_onc.x
RemotingService/server/: CMakeLists.txt
RemotingService/server/src/: array_xdr.h  headservice.cpp  headservice_onc.c
SyntaxTree/: CMakeLists.txt
SyntaxTree/src/: Wrapper.cpp  main.cpp
Tests/: CMakeLists.txt
Tests/TestSyntaxTree/: CMakeLists.txt  TestSyntaxTree.cpp  main.cpp
asioChatBot/: CMakeLists.txt
asioChatBot/client/: CMakeLists.txt
asioChatBot/client/src/: client.cpp
asioChatBot/server/src/: server.cpp
grpc/: CMakeLists.txt
grpc/src/: headservice.cpp
remoting/: CMakeLists.txt
remoting/client/: CMakeLists.txt
remoting/client/src/: headclient.cpp
remoting/protocol/: CMakeLists.txt
remoting/protocol/protos/: kvp.proto
remoting/server/: CMakeLists.txt
remoting/src/: headclient.cpp  headservice.cpp
renderer/: CMakeLists.txt
renderer/src/: renderer.cpp
src/: server.cpp
webserver/: CMakeLists.txt
